@@ -44,6 +44,97 @@ $FunctionList['comment_list'] = array( 'name' => 'comment_list',
                                                   )
                                                )
                                              );
+
+$FunctionList['comment_list_by_content_list'] = array( 'name' => 'comment_list_by_content_list',
+                                                       'operation_types' => array( 'read' ),
+                                                       'call_method' => array( 'include_file' => 'extension/ezcomments/classes/ezcomfunctioncollection.php',
+                                                       'class' => 'ezcomFunctionCollection',
+                                                       'method' => 'fetchCommentListByContentObjectIDList' ),
+                                                       'parameter_type' => 'standard',
+                                                       'parameters' => array(
+                                                       array( 'name'=> 'contentobject_id_list',
+                                                              'type'=>'array',
+                                                              'required'=>false,
+                                                              'default'=>null
+                                                        ),
+                                                       array( 'name'=> 'user_id',
+                                                              'type'=> 'integer',
+                                                              'required' => false,
+                                                              'default'  => null
+                                                          ),
+                                                      array( 'name'=> 'language_code',
+                                                              'type'=>'string',
+                                                              'required'=>false,
+                                                              'default'=>null
+                                                        ),
+                                                      array( 'name'=> 'status',
+                                                          'type'=> 'integer',
+                                                          'required' => false,
+                                                          'default'  => 1
+                                                         ),
+                                                     array( 'name'=> 'sort_field',
+                                                      'type'=> 'string',
+                                                      'required' => false,
+                                                      'default'  => 'modified'
+                                                     ),
+                                                     array( 'name'=> 'sort_order',
+                                                          'type'=> 'string',
+                                                          'required' => false,
+                                                          'default'  => 'desc'
+                                                      ),
+                                                     array( 'name'=> 'length',
+                                                          'type'=> 'integer',
+                                                          'required' => true,
+                                                          'default'  => null
+                                                      ),
+                                                     array( 'name'=> 'extra_condition',
+                                                          'type'=> 'array',
+                                                          'required' => false,
+                                                          'default'  => array()
+                                                      )
+                                                   )
+                                                 );
+
+$FunctionList['latest_comment_list'] = array( 'name' => 'latest_comment_list',
+                                                       'operation_types' => array( 'read' ),
+                                                       'call_method' => array( 'include_file' => 'extension/ezcomments/classes/ezcomfunctioncollection.php',
+                                                       'class' => 'ezcomFunctionCollection',
+                                                       'method' => 'fetchLatestCommentList' ),
+                                                       'parameter_type' => 'standard',
+                                                       'parameters' => array(
+                                                       array( 'name'=> 'user_id',
+                                                              'type'=>'integer',
+                                                              'required'=>false,
+                                                              'default'=>null
+                                                        ),
+                                                       array( 'name'=> 'user_email',
+                                                              'type'=> 'string',
+                                                              'required' => false,
+                                                              'default'  => null
+                                                          ),
+                                                      array( 'name'=> 'length',
+                                                              'type'=>'integer',
+                                                              'required'=>false,
+                                                              'default'=>null
+                                                        ),
+                                                      array( 'name'=> 'is_modified',
+                                                          'type'=> 'boolean',
+                                                          'required' => false,
+                                                          'default'  => false
+                                                         ),
+                                                     array( 'name'=> 'after',
+                                                      'type'=> 'integer',
+                                                      'required' => false,
+                                                      'default'  => null
+                                                     ),
+                                                     array( 'name'=> 'sort_order',
+                                                          'type'=> 'string',
+                                                          'required' => false,
+                                                          'default'  => 'desc'
+                                                      )
+                                                   )
+                                                 );
+
 $FunctionList['comment_count'] = array( 'name' => 'comment_count',
                                                   'operation_types' => array( 'read' ),
                                                   'call_method' => array( 'include_file' => 'extension/ezcomments/classes/ezcomfunctioncollection.php',
